<resources>
    <string name="app_name">StackOverflow Badges</string>
    <string name="retry">Retry</string>
    <string name="login_successfully">Login Successfully!</string>
    <string name="empty_state">No Items matching this filter</string>

    //Filters
    <string name="all">All</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="bronze">Bronze</string>
    <string name="asc_order">Asc</string>
    <string name="desc_order">Desc</string>

    //stack overflow api
    <string name="client_id">19414</string>
    <string name="client_secret">lL1jf*2t22nzgMfVy3Zu1w((</string>
    <string name="redirect_uri">http://www.stackoverflowbadges.com/success</string>
    <string name="scope">no_expiry</string>
    <string name="key">w52jhZVRBAv1ImHCSORkGA((</string>
</resources>